--- a/tcav/tcav_examples/discrete/kdd99_discrete_example.ipynb
+++ b/tcav/tcav_examples/discrete/kdd99_discrete_example.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jupyter/tcav/tcav/tcav_examples/discrete\n",
+      "/home/jupyter/tcav\n"
+     ]
+    }
+   ],
    "source": [
     "# Necessary because jupyter restricts relative imports from parent directories\n",
     "import os\n",
@@ -25,7 +34,7 @@
     "from tensorflow.io import gfile\n",
     "from tcav.tcav_examples.discrete.kdd99_activation_generator import KDD99DiscreteActivationGenerator\n",
     "from tcav.utils import create_session\n",
-    "from tcav.tcav_examples.discrete.kdd99_model_wrapper import KDD99KerasModelWrapper\n"
+    "from tcav.tcav_examples.discrete.kdd99_model_wrapper import KDD99KerasModelWrapper"
    ]
   },
   {
@@ -71,190 +80,19 @@
    ],
    "source": [
     "# Make data\n",
-    "! python ./tcav/tcav_examples/discrete/make_kdd99_concepts.py --source_dir={source_dir}\n"
+    "! python ./tcav/tcav_examples/discrete/make_kdd99_concepts.py --source_dir={source_dir}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Users/raphaelblanes/PycharmProjects/PULL_DISCRETE/tcav/tcav/utils.py:40: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/raphaelblanes/PycharmProjects/PULL_DISCRETE/tcav/tcav/utils.py:44: The name tf.InteractiveSession is deprecated. Please use tf.compat.v1.InteractiveSession instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/raphaelblanes/PycharmProjects/tcav2/ENV_FOR_TCAV/lib/python3.7/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "If using Keras pass *_constraint arguments to layers.\n",
-      "Model: \"model\"\n",
-      "__________________________________________________________________________________________________\n",
-      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      "input (InputLayer)              [(None, 41)]         0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "tf_op_layer_split (TensorFlowOp [(None, 1), (None, 1 0           input[0][0]                      \n",
-      "__________________________________________________________________________________________________\n",
-      "embedding (Embedding)           (None, 1, 200)       600         tf_op_layer_split[0][1]          \n",
-      "__________________________________________________________________________________________________\n",
-      "embedding_1 (Embedding)         (None, 1, 200)       13200       tf_op_layer_split[0][2]          \n",
-      "__________________________________________________________________________________________________\n",
-      "embedding_2 (Embedding)         (None, 1, 200)       2200        tf_op_layer_split[0][3]          \n",
-      "__________________________________________________________________________________________________\n",
-      "reshape (Reshape)               (None, 200)          0           embedding[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "reshape_1 (Reshape)             (None, 200)          0           embedding_1[0][0]                \n",
-      "__________________________________________________________________________________________________\n",
-      "reshape_2 (Reshape)             (None, 200)          0           embedding_2[0][0]                \n",
-      "__________________________________________________________________________________________________\n",
-      "concatenate (Concatenate)       (None, 638)          0           tf_op_layer_split[0][0]          \n",
-      "                                                                 reshape[0][0]                    \n",
-      "                                                                 reshape_1[0][0]                  \n",
-      "                                                                 reshape_2[0][0]                  \n",
-      "                                                                 tf_op_layer_split[0][4]          \n",
-      "                                                                 tf_op_layer_split[0][5]          \n",
-      "                                                                 tf_op_layer_split[0][6]          \n",
-      "                                                                 tf_op_layer_split[0][7]          \n",
-      "                                                                 tf_op_layer_split[0][8]          \n",
-      "                                                                 tf_op_layer_split[0][9]          \n",
-      "                                                                 tf_op_layer_split[0][10]         \n",
-      "                                                                 tf_op_layer_split[0][11]         \n",
-      "                                                                 tf_op_layer_split[0][12]         \n",
-      "                                                                 tf_op_layer_split[0][13]         \n",
-      "                                                                 tf_op_layer_split[0][14]         \n",
-      "                                                                 tf_op_layer_split[0][15]         \n",
-      "                                                                 tf_op_layer_split[0][16]         \n",
-      "                                                                 tf_op_layer_split[0][17]         \n",
-      "                                                                 tf_op_layer_split[0][18]         \n",
-      "                                                                 tf_op_layer_split[0][19]         \n",
-      "                                                                 tf_op_layer_split[0][20]         \n",
-      "                                                                 tf_op_layer_split[0][21]         \n",
-      "                                                                 tf_op_layer_split[0][22]         \n",
-      "                                                                 tf_op_layer_split[0][23]         \n",
-      "                                                                 tf_op_layer_split[0][24]         \n",
-      "                                                                 tf_op_layer_split[0][25]         \n",
-      "                                                                 tf_op_layer_split[0][26]         \n",
-      "                                                                 tf_op_layer_split[0][27]         \n",
-      "                                                                 tf_op_layer_split[0][28]         \n",
-      "                                                                 tf_op_layer_split[0][29]         \n",
-      "                                                                 tf_op_layer_split[0][30]         \n",
-      "                                                                 tf_op_layer_split[0][31]         \n",
-      "                                                                 tf_op_layer_split[0][32]         \n",
-      "                                                                 tf_op_layer_split[0][33]         \n",
-      "                                                                 tf_op_layer_split[0][34]         \n",
-      "                                                                 tf_op_layer_split[0][35]         \n",
-      "                                                                 tf_op_layer_split[0][36]         \n",
-      "                                                                 tf_op_layer_split[0][37]         \n",
-      "                                                                 tf_op_layer_split[0][38]         \n",
-      "                                                                 tf_op_layer_split[0][39]         \n",
-      "                                                                 tf_op_layer_split[0][40]         \n",
-      "__________________________________________________________________________________________________\n",
-      "dense (Dense)                   (None, 1000)         639000      concatenate[0][0]                \n",
-      "__________________________________________________________________________________________________\n",
-      "batch_normalization (BatchNorma (None, 1000)         4000        dense[0][0]                      \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_1 (Dense)                 (None, 256)          256256      batch_normalization[0][0]        \n",
-      "__________________________________________________________________________________________________\n",
-      "batch_normalization_1 (BatchNor (None, 256)          1024        dense_1[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                 (None, 23)           5911        batch_normalization_1[0][0]      \n",
-      "==================================================================================================\n",
-      "Total params: 922,191\n",
-      "Trainable params: 919,679\n",
-      "Non-trainable params: 2,512\n",
-      "__________________________________________________________________________________________________\n",
-      "None\n",
-      "Train on 395216 samples, validate on 98805 samples\n",
-      "Epoch 1/4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "395216/395216 [==============================] - 80s 203us/sample - loss: 2.2280 - acc: 0.9755 - val_loss: 2.2498 - val_acc: 0.9824\n",
-      "Epoch 2/4\n",
-      "395216/395216 [==============================] - 88s 223us/sample - loss: 2.2174 - acc: 0.9817 - val_loss: 2.2282 - val_acc: 0.9821\n",
-      "Epoch 3/4\n",
-      "395216/395216 [==============================] - 77s 195us/sample - loss: 2.2172 - acc: 0.9818 - val_loss: 2.2250 - val_acc: 0.9824\n",
-      "Epoch 4/4\n",
-      "395216/395216 [==============================] - 83s 211us/sample - loss: 2.2170 - acc: 0.9820 - val_loss: 2.2265 - val_acc: 0.9821\n",
-      "[[1.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00]\n",
-      " [6.2406063e-04 0.0000000e+00 0.0000000e+00 0.0000000e+00 2.8520823e-05\n",
-      "  9.9999428e-01 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00]\n",
-      " [6.2406063e-04 0.0000000e+00 0.0000000e+00 0.0000000e+00 2.8520823e-05\n",
-      "  9.9999428e-01 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00]\n",
-      " [6.3517690e-04 0.0000000e+00 0.0000000e+00 0.0000000e+00 2.8371811e-05\n",
-      "  9.9999422e-01 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00]\n",
-      " [6.2406063e-04 0.0000000e+00 0.0000000e+00 0.0000000e+00 2.8520823e-05\n",
-      "  9.9999428e-01 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00]\n",
-      " [2.6195616e-02 0.0000000e+00 0.0000000e+00 0.0000000e+00 9.9999142e-01\n",
-      "  2.3841858e-07 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  2.9802322e-08 0.0000000e+00 0.0000000e+00]\n",
-      " [9.9999988e-01 0.0000000e+00 0.0000000e+00 0.0000000e+00 5.8412552e-06\n",
-      "  2.6822090e-07 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00]\n",
-      " [6.2406063e-04 0.0000000e+00 0.0000000e+00 0.0000000e+00 2.8520823e-05\n",
-      "  9.9999428e-01 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00]\n",
-      " [6.2406063e-04 0.0000000e+00 0.0000000e+00 0.0000000e+00 2.8520823e-05\n",
-      "  9.9999428e-01 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00]\n",
-      " [6.2406063e-04 0.0000000e+00 0.0000000e+00 0.0000000e+00 2.8520823e-05\n",
-      "  9.9999428e-01 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00 0.0000000e+00 0.0000000e+00]]\n",
-      "WARNING:tensorflow:From /Users/raphaelblanes/PycharmProjects/tcav2/ENV_FOR_TCAV/lib/python3.7/site-packages/tensorflow_core/python/keras/initializers.py:143: calling RandomNormal.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "WARNING:tensorflow:From /Users/raphaelblanes/PycharmProjects/tcav2/ENV_FOR_TCAV/lib/python3.7/site-packages/tensorflow_core/python/ops/init_ops.py:97: calling GlorotUniform.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "WARNING:tensorflow:From /Users/raphaelblanes/PycharmProjects/tcav2/ENV_FOR_TCAV/lib/python3.7/site-packages/tensorflow_core/python/ops/init_ops.py:97: calling Zeros.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "WARNING:tensorflow:From /Users/raphaelblanes/PycharmProjects/tcav2/ENV_FOR_TCAV/lib/python3.7/site-packages/tensorflow_core/python/ops/init_ops.py:97: calling Ones.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "WARNING:tensorflow:From /Users/raphaelblanes/PycharmProjects/PULL_DISCRETE/tcav/tcav/model.py:448: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create models\n",
     "label_path = os.path.join(source_dir, \"labels.txt\")\n",
     "model_path = os.path.join(source_dir, \"kdd99_2.h5\")\n",
-    "uci_model = KDD99KerasModelWrapper(create_session(), model_path, label_path)\n",
-    "\n"
+    "uci_model = KDD99KerasModelWrapper(create_session(), model_path, label_path)"
    ]
   },
   {
@@ -269,32 +107,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Users/raphaelblanes/PycharmProjects/PULL_DISCRETE/tcav/tcav/tcav.py:394: The name tf.logging.info is deprecated. Please use tf.compat.v1.logging.info instead.\n",
-      "\n",
-      "WARNING:tensorflow:\n",
-      "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
-      "For more information, please see:\n",
-      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
-      "  * https://github.com/tensorflow/addons\n",
-      "  * https://github.com/tensorflow/io (for I/O related ops)\n",
-      "If you depend on functionality not listed there, please file an issue.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tcav.utils import create_session\n",
     "import tcav.utils_plot as utils_plot # utils_plot requires matplotlib\n",
     "from tcav.tcav import TCAV\n",
     "import tensorflow as tf\n",
-    "tf.logging.set_verbosity(0)\n",
+    "tf.compat.v1.logging.set_verbosity(0)\n",
     "\n",
     "target = \"normal.\"\n",
     "bottlenecks = [\"dense\", \"dense_1\" ]\n",
@@ -313,7 +134,7 @@
     "                   num_random_exp=10)\n",
     "\n",
     "\n",
-    "results = my_tcav.run()\n"
+    "results = my_tcav.run()"
    ]
   },
   {
@@ -349,19 +170,16 @@
     }
    ],
    "source": [
-    "utils_plot.plot_results(results, num_random_exp=10)\n",
-    "\n"
+    "utils_plot.plot_results(results, num_random_exp=10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "environment": {
+   "name": "tf2-2-3-gpu.2-3.m56",
+   "type": "gcloud",
+   "uri": "gcr.io/deeplearning-platform-release/tf2-2-3-gpu.2-3:m56"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -377,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.8"
   },
   "pycharm": {
    "stem_cell": {
@@ -390,5 +208,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
